--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "valarray": "cpp",
         "variant": "cpp",
         "strstream": "cpp",
-        "eigen": "cpp"
+        "eigen": "cpp",
+        "complex": "cpp"
     }
 }
