--- a/hw5/.vscode/settings.json
+++ b/hw5/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "debug.onTaskErrors": "showErrors",
     "files.associations": {
-        "*.js": "javascriptreact",
         "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
@@ -15,32 +13,28 @@
         "cwctype": "cpp",
         "array": "cpp",
         "atomic": "cpp",
-        "bit": "cpp",
         "*.tcc": "cpp",
+        "bitset": "cpp",
         "chrono": "cpp",
-        "codecvt": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
+        "complex": "cpp",
         "condition_variable": "cpp",
         "cstdint": "cpp",
         "deque": "cpp",
-        "list": "cpp",
-        "map": "cpp",
-        "set": "cpp",
-        "string": "cpp",
         "unordered_map": "cpp",
-        "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
+        "map": "cpp",
         "memory": "cpp",
         "memory_resource": "cpp",
         "numeric": "cpp",
         "optional": "cpp",
         "random": "cpp",
         "ratio": "cpp",
+        "set": "cpp",
+        "string": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
@@ -55,24 +49,20 @@
         "limits": "cpp",
         "mutex": "cpp",
         "new": "cpp",
-        "numbers": "cpp",
         "ostream": "cpp",
-        "semaphore": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
-        "stop_token": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp",
-        "variant": "cpp",
+        "bit": "cpp",
         "strstream": "cpp",
-        "eigen": "cpp",
-        "complex": "cpp",
-        "bitset": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
         "cfenv": "cpp",
-        "source_location": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "variant": "cpp",
+        "eigen": "cpp"
     }
 }
